# helm-charts

./: .gitignore  AGENTS.md  Makefile  README.md  kind-config.yaml
.sisyphus/: boulder.json
.sisyphus/plans/: cert-manager-separation.md  kalypso-infra-chart.md
argocd/: applicationset.yaml  project.yaml  values.yaml
charts/cert-manager/: Chart.yaml  values.yaml
charts/kalypso-grafana/: Chart.yaml  values.yaml
charts/kalypso-istio/: Chart.yaml  values.yaml
charts/kalypso-loki/: Chart.yaml  values.yaml
charts/kalypso-mimir/: Chart.yaml  values.yaml
charts/kalypso-minio/: Chart.yaml  values.yaml
charts/kalypso-otel/: Chart.yaml  values.yaml
charts/kalypso-pyroscope/: Chart.yaml  values.yaml
charts/kalypso-tempo/: Chart.yaml  values.yaml
docker/ebpf-profiler/: Dockerfile
docker/pyroscope-autoinstrumentation/: Dockerfile  pyroscope_bootstrap.py
manifests/alloy/: README.md  alloy-rbac.yaml  kustomization.yaml  namespace.yaml  values.yaml
manifests/cert-manager/: appset.yaml  kustomization.yaml  namespace.yaml
manifests/grafana/: appset.yaml  kustomization.yaml  namespace.yaml  values.yaml
sample-fastapi/: Dockerfile  Makefile  README.md  pyproject.toml
sample-fastapi/manifest/: deployment.yaml  instrumentation.yaml  kustomization.yaml  service.yaml
sample-fastapi/src/sample_fastapi/: __init__.py  main.py
scripts/: setup-colima.sh  verify-ebpf.sh
values/: alloy-values.yaml  grafana-values.yaml  mimir-values.yaml  minio-values.yaml  otel-collector.yaml  otel-operator-values.yaml  pyroscope-values.yaml  tempo-values.yaml
(+66 files in other folders)
